# licensebat

./: .env  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md
.dev/: .licrc  package-lock.json
.dev/client_issues/: package-lock.json
.dev/npm/: package.json
.dev/npm/v1/: package-lock.json
.dev/npm/v2/: package-lock.json
.dev/npm/v3/: package-lock.json
.github/workflows/: build.yaml  release.yaml
datasets/: license-cache.bin.zstd
licensebat-cli/: Cargo.toml  README.md  license-cache.bin.zstd
licensebat-cli/src/: check.rs  cli.rs  lib.rs  main.rs
licensebat-collector-dart/: Cargo.toml
licensebat-collector-dart/src/: dart.rs  lib.rs
licensebat-collector-js/: Cargo.toml
licensebat-collector-js/src/: common.rs  lib.rs  npm.rs  npm_dependency.rs  yarn.rs
licensebat-collector-rust/: Cargo.toml
licensebat-collector-rust/src/: crates_io.rs
licensebat-core/: Cargo.toml  README.md
licensebat-core/src/: collector.rs  dependencies.rs  dependency.rs  dependency_collector.rs  dependency_retriever.rs  lib.rs  licrc.rs  retriever.rs
licensebat-dart/: Cargo.toml  README.md
licensebat-dart/src/: lib.rs
licensebat-dart/src/collector/: dart_dependency.rs  mod.rs
licensebat-dart/src/retriever/: hosted.rs  mod.rs
licensebat-dart/tests/: hosted_retriever_tests.rs  integration_hosted_retriever.rs
licensebat-dependency-collector-dart/: Cargo.toml  build.rs
licensebat-dependency-collector-dart/src/: dart.rs  dart_dependency.rs  dart_dependency_collector.rs  lib.rs
licensebat-dependency-collector-js/: Cargo.toml
licensebat-dependency-collector-js/src/: common.rs  lib.rs  npm.rs  npm_dependency.rs  npm_dependency_collector.rs  yarn_dependency_collector.rs
licensebat-dependency-collector-rust/: Cargo.toml
licensebat-dependency-collector-rust/src/: crates_io.rs  lib.rs
licensebat-dependency-retriever-dart-hosted/: Cargo.toml
licensebat-dependency-retriever-dart-hosted/src/: dart_hosted.rs  dart_hosted_dependency_retriever.rs  lib.rs
licensebat-dependency-retriever-dart-hosted/tests/: integration_tests.rs
licensebat-dependency-retriever-js-npm/: Cargo.toml
licensebat-dependency-retriever-js-npm/src/: js_npm_dependency_retriever.rs  lib.rs  npm_metadata.rs
licensebat-dependency-retriever-js-npm/tests/: integration_test.rs  integration_tests.rs
licensebat-dependency-retriever-rust-crates-io/: Cargo.toml
licensebat-dependency-retriever-rust-crates-io/src/: lib.rs  rust_crates_io_dependency_retriever.rs
licensebat-dependency-retriever-rust-crates-io/tests/: integration_tests.rs
licensebat-js/: Cargo.toml  README.md
licensebat-js/src/: lib.rs
licensebat-js/src/collector/: common.rs  mod.rs  npm.rs  npm_dependency.rs  yarn.rs
licensebat-js/src/retriever/: mod.rs  npm.rs  npm_metadata.rs
licensebat-js/tests/: integration_npm_retriever.rs  integration_tests.rs
licensebat-retriever-dart/: Cargo.toml
licensebat-retriever-dart/src/: lib.rs
licensebat-retriever-dart/tests/: integration_tests.rs
licensebat-retriever-js/: Cargo.toml
licensebat-retriever-js/src/: lib.rs  npm_retriever.rs
licensebat-retriever-js/tests/: integration_tests.rs
licensebat-retriever-rust/: Cargo.toml
licensebat-retriever-rust/tests/: integration_tests.rs
licensebat-rust/: Cargo.toml  README.md
licensebat-rust/src/: collector.rs  lib.rs
licensebat-rust/src/retriever/: crates_io.rs  docs_rs.rs  mod.rs  utils.rs
licensebat-rust/tests/: crates_io_retriever_tests.rs  integration_crates_io_retriever.rs  integration_docs_rs_retriever.rs
