# [patch.crates-io]
# licensebat-core = { path = "licensebat-core" }
# licensebat-dart = { path = "licensebat-dart" }
# licensebat-js = { path = "licensebat-js" }
# licensebat-rust = { path = "licensebat-rust" }

[workspace]
members = [
    "licensebat-cli",
    "licensebat-core",
    "licensebat-js",
    "licensebat-dart",
    "licensebat-rust"
]
