[package]
name = "licensebat-cli"
version = "0.0.1"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "CLI tool to manage dependencies' license validation"
edition = "2021"
license = "MIT"
repository = "https://github.com/licensebat/licensebat-cli"
homepage = "https://licensebat.com"
categories = ["command-line-utilities", "development-tools"]
keywords = ["license", "validation", "policy", "compliance", "cli"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "licensebat"
path = "src/main.rs"

[dependencies]
# core libs
licensebat-core = { path = "../licensebat-core", features = ["licrc-from-file"] }
licensebat-dart = { path = "../licensebat-dart" }
licensebat-js = { path = "../licensebat-js" }
licensebat-rust = { path = "../licensebat-rust" }
# main dependencies
tokio = { version = "1.15.0", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = "0.11"
# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-futures = "0.2"
# cli
structopt = "0.3.25"
# serde
serde = "1.0"
serde_json = "1.0"
toml = "0.5"
# errors
anyhow = "1.0"
thiserror = "1.0"
# utils
dotenv = "0.15"
futures = "0.3"