[package]
name = "licensebat-cli"
version.workspace = true
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "CLI tool to manage dependencies' license validation"
edition = "2021"
license = "MIT"
repository = "https://github.com/licensebat/licensebat"
homepage = "https://licensebat.com"
categories = ["command-line-utilities", "development-tools"]
keywords = ["license", "validation", "policy", "compliance", "cli"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "licensebat"
path = "src/main.rs"

[dependencies]
licensebat-core = { path = "../licensebat-core", version = "0.22.0", features = [
    "licrc-from-file",

] } # core libs
licensebat-dart = { path = "../licensebat-dart", version = "0.22.0" }
licensebat-js = { path = "../licensebat-js", version = "0.22.0" }
licensebat-rust = { path = "../licensebat-rust", version = "0.22.0" }
# main dependencies
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { workspace = true }
# tracing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "time",
] }
tracing-futures = "0.2"
# cli
structopt = "0.3"
# serde
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
# errors
anyhow = { workspace = true }
thiserror = { workspace = true }
# utils
dotenv = "0.15"
futures = { workspace = true }
# spdx
askalono = { workspace = true }
