[package]
name = "licensebat-collector-dart"
version = "0.1.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "Extracts dependencies from pubspec.yaml"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
licensebat-core = { path = "../licensebat-core" }
licensebat-retriever-dart = { path = "../licensebat-retriever-dart" }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
# utils
futures = { version = "0.3.6" } 
tracing = "0.1"
reqwest = "0.11"
# spdx
askalono = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[build-dependencies]
askalono = { version = "0.4.3" }