[package]
name = "licensebat-core"
version = "0.0.3"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "Types and Traits for building Licensebat libraries"
edition = "2021"
license = "MIT"
repository = "https://github.com/licensebat/licensebat"
homepage = "https://licensebat.com"
categories = ["development-tools"]
keywords = ["license", "validation", "policy", "compliance"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
licrc-from-file = ["toml"]

[dependencies]
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
yarn-lock-parser = "0.1.1"
cargo-lock = "7.0.1"
# utils
futures = { version = "0.3.6" } 
tracing = "0.1"
toml = {version = "0.5", optional = true }
# errors
thiserror = "1.0.21"