[package]
name = "licensebat-core"
version.workspace = true
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "Types and Traits for building Licensebat libraries"
edition = "2021"
license = "MIT"
repository = "https://github.com/licensebat/licensebat"
homepage = "https://licensebat.com"
categories = ["development-tools"]
keywords = ["license", "validation", "policy", "compliance"]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
licrc-from-file = ["toml"]

[dependencies]
# serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
yarn-lock-parser = { workspace = true }
package-lock-json-parser = { workspace = true }
cargo-lock = { workspace = true }
# utils
futures = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true, optional = true }
# errors
thiserror = { workspace = true }

# see https://docs.rs/about/metadata
[package.metadata.docs.rs]
all-features = true
