[package]
name = "licensebat-dart"
version = "0.0.9"
edition = "2021"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "A library to get information about your Dart dependencies"
license = "MIT"
repository = "https://github.com/licensebat/licensebat"
homepage = "https://licensebat.com"
categories = ["development-tools"]
keywords = ["license", "validation", "policy", "compliance", "dart"]


[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# core
licensebat-core = { path = "../licensebat-core", version = "0.0.9" }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
# utils
futures = { version = "0.3.6" } 
tracing = "0.1"
reqwest = "0.11"
# html scraper
scraper = "0.13"
selectors = "0.22" # don't update for the moment. 0.23 breaks
# spdx
askalono = "0.4.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
