[package]
name = "licensebat-dart"
version = "0.0.21"
edition = "2021"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "A library to get information about your Dart dependencies"
license = "MIT"
repository = "https://github.com/licensebat/licensebat"
homepage = "https://licensebat.com"
categories = ["development-tools"]
keywords = ["license", "validation", "policy", "compliance", "dart"]


[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# core
licensebat-core = { path = "../licensebat-core", version = "0.0.21" }
# serialization
serde = { workspace = true }
serde_yaml = { workspace = true }
# utils
futures = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
# html scraper
scraper = "0.13"
selectors = "0.22" # don't update for the moment. 0.23 breaks
# spdx
askalono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
