[package]
name = "licensebat-dependency-collector-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
licensebat-core = { path = "../licensebat-core" }
licensebat-dependency-retriever-rust-crates-io = { path = "../licensebat-dependency-retriever-rust-crates-io" }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo-lock = "7.0.1"
toml = "0.5"
# utils
futures = { version = "0.3.6" } 
tracing = "0.1"
reqwest = { version = "0.11.1", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }