[package]
name = "licensebat-dependency-retriever-dart-hosted"
version = "0.1.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "Retrieves information about the dependencies of a dart package by using pub.dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
licensebat-core = { path = "../licensebat-core" }
# utils
futures = "0.3.6" 
tracing = "0.1"
reqwest = "0.11"
# html scraper
scraper = "0.12"
selectors = "0.22" # don't update for the moment. 0.23 breaks
# spdx
askalono = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
