[package]
name = "licensebat-dependency-retriever-rust-crates-io"
version = "0.1.0"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "Retrieves information about the dependencies of a rust crate by using crates.io API"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
licensebat-core = { path = "../licensebat-core" }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
# utils
futures = "0.3.6" 
tracing = "0.1"
reqwest = { version = "0.11.1", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
