[package]
name = "licensebat-js"
version = "0.1.0"
edition = "2021"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "A library to get information about your JS/TS dependencies"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# core
licensebat-core = { path = "../licensebat-core" }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# utils
futures = { version = "0.3.6" } 
tracing = "0.1"
reqwest = { version = "0.11.1", features = ["json"] }
yarn-lock-parser = "0.1.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }