[package]
name = "licensebat-js"
version = "0.0.16"
edition = "2021"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "A library to get information about your JS/TS dependencies"
license = "MIT"
repository = "https://github.com/licensebat/licensebat"
homepage = "https://licensebat.com"
categories = ["development-tools"]
keywords = ["license", "validation", "policy", "compliance", "javascript"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# core
licensebat-core = { path = "../licensebat-core", version = "0.0.16" }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# utils
futures = { version = "0.3.6" } 
tracing = "0.1"
reqwest = { version = "0.11.1", features = ["json"] }
yarn-lock-parser = "0.4.1"
package-lock-json-parser = "0.1.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
