[package]
name = "licensebat-js"
version = "0.0.21"
edition = "2021"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "A library to get information about your JS/TS dependencies"
license = "MIT"
repository = "https://github.com/licensebat/licensebat"
homepage = "https://licensebat.com"
categories = ["development-tools"]
keywords = ["license", "validation", "policy", "compliance", "javascript"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# core
licensebat-core = { path = "../licensebat-core", version = "0.0.21" }
# serialization
serde = { workspace = true }
serde_json = { workspace = true }
# utils
futures = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
yarn-lock-parser = { workspace = true }
package-lock-json-parser = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
