[package]
name = "licensebat-rust"
version = "0.0.2"
edition = "2021"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "A library to get information about your Rust dependencies"
license = "MIT"
repository = "https://github.com/licensebat/licensebat"
homepage = "https://licensebat.com"
categories = ["development-tools"]
keywords = ["license", "validation", "policy", "compliance", "rust"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
# core
licensebat-core = { path = "../licensebat-core", version = "0.0.2" }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cargo-lock = "7.0.1"
toml = "0.5"
# utils
futures = "0.3.6" 
tracing = "0.1"
reqwest = { version = "0.11.1", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }