[package]
name = "licensebat-rust"
version.workspace = true
edition = "2021"
authors = ["Roberto Huertas <roberto.huertas@outlook.com>"]
description = "A library to get information about your Rust dependencies"
license = "MIT"
repository = "https://github.com/licensebat/licensebat"
homepage = "https://licensebat.com"
categories = ["development-tools"]
keywords = ["license", "validation", "policy", "compliance", "rust"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
licensebat-core = { path = "../licensebat-core", version = "0.23.0" }
# core
# serialization
serde = { workspace = true }
serde_json = { workspace = true }

cargo-lock = { workspace = true }
toml = { workspace = true }
# utils
reqwest = { workspace = true, features = ["json"] }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
# docs rs
easy-scraper = "0.2"
html2text = "0.12"
askalono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
